--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "echarts": "^5.1.1",
+    "http-proxy-middleware": "^0.19.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
@@ -15,6 +19,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "stackedit-js": "^1.0.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "clsx": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0"
   }
