modify HomePage Layout by Gene

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "ag-grid-community": "^25.2.1",
+    "ag-grid-enterprise": "^25.2.1",
     "ag-grid-react": "^25.2.0",
     "axios": "^0.21.1",
     "echarts": "^5.1.1",
