--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "rc-scrollbars": "^1.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
