--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "echarts": "^5.1.1",
     "http-proxy-middleware": "^0.19.1",
+    "plotly.js": "^1.58.4",
+    "plotly.js-basic-dist": "^1.58.4",
     "prop-types": "^15.7.2",
     "rc-scrollbars": "^1.1.3",
     "react": "^17.0.2",
@@ -21,6 +23,8 @@
     "react-bootstrap-date-picker": "^5.1.0",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-pivottable": "^0.11.0",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
