--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "http-proxy-middleware": "^0.19.1",
     "plotly.js": "^1.58.4",
     "plotly.js-basic-dist": "^1.58.4",
+    "plotly.js-dist": "^1.58.4",
     "prop-types": "^15.7.2",
     "rc-scrollbars": "^1.1.3",
     "react": "^17.0.2",
@@ -58,6 +59,8 @@
   },
   "devDependencies": {
     "clsx": "^1.1.1",
+    "papaparse": "^5.3.1",
+    "react-dropzone": "^11.3.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0"
   }
