--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,11 @@
 cachetools==4.2.1
 certifi==2020.6.20
 chardet==4.0.0
+click==8.1.2
+colorama==0.4.4
 cycler==0.10.0
+Flask==2.1.1
+Flask-Cors==3.0.10
 google-api-core==1.26.1
 google-auth==1.28.0
 google-cloud-speech==2.1.0
@@ -9,14 +13,19 @@ googleapis-common-protos==1.53.0
 grpcio==1.36.1
 grpcio-tools==1.36.1
 idna==2.10
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
 joblib==0.17.0
 kiwisolver==1.2.0
 libcst==0.3.17
+MarkupSafe==2.1.1
 matplotlib==3.3.2
 mypy-extensions==0.4.3
 numpy==1.19.2
 opencv-python==4.4.0.44
 packaging==20.9
+pandas==1.3.5
 Pillow==8.0.1
 proto-plus==1.18.0
 protobuf==3.15.6
@@ -36,3 +45,5 @@ threadpoolctl==2.1.0
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
 urllib3==1.26.4
+Werkzeug==2.1.1
+zipp==3.8.0
